--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,7 +2,9 @@ name: Build and Test Wi-Fi Latency Application
 
 on:
   push:
-    branches: [ main, test-build-workflow ]
+    branches: [ main, test-build-workflow]
+    tags:
+      - 'v*'  # Trigger on version tags like v1.0.0, v2.1.3, etc.
   pull_request:
     branches: [ main ]
 
@@ -246,4 +248,76 @@ jobs:
             echo "Code formatting check passed ✓"
           else
             echo "No C/H files found to check"
-          fi 
+          fi
+
+  create-release:
+    needs: [set-version, build-and-test-in-docker, validate-documentation, static-analysis]
+    runs-on: ubuntu-22.04
+    if: startsWith(github.ref, 'refs/tags/')
+    steps:
+      - name: Download all build artifacts
+        uses: actions/download-artifact@v4
+        with:
+          path: artifacts
+
+      - name: Display artifact structure
+        run: find artifacts -type f -name "*.hex"
+
+      - name: Create release package
+        run: |
+          mkdir -p release-package
+          
+          # Copy and rename hex files with configuration names
+          for config_dir in artifacts/build-*; do
+            config_name=$(basename "$config_dir" | sed 's/build-//')
+            if [ -f "$config_dir/zephyr.hex" ]; then
+              cp "$config_dir/zephyr.hex" "release-package/wifi-latency-test-${config_name}-${GITHUB_REF_NAME}.hex"
+            fi
+          done
+          
+          # Create a zip archive with all firmware files
+          cd release-package
+          zip -r "../wifi-latency-test-firmware-${GITHUB_REF_NAME}.zip" .
+          cd ..
+          
+          # List created files
+          ls -la release-package/
+          ls -la wifi-latency-test-firmware-*.zip
+
+      - name: Create GitHub Release
+        uses: softprops/action-gh-release@v1
+        with:
+          name: "Wi-Fi Latency Test ${{ github.ref_name }}"
+          body: |
+            ## Wi-Fi Latency Test Firmware Release ${{ github.ref_name }}
+            
+            This release contains pre-compiled firmware for all test configurations:
+            
+            ### Test Configurations Included:
+            - **UDP TX Station** - UDP transmission device in station mode
+            - **UDP RX Station** - UDP reception device in station mode  
+            - **UDP RX SoftAP** - UDP reception device in SoftAP mode
+            - **Raw TX Non-Connected** - Raw packet transmission in non-connected mode
+            - **Raw RX Monitor** - Raw packet reception in monitor mode
+            
+            ### Files:
+            - Individual `.hex` files for each configuration
+            - Complete firmware package: `wifi-latency-test-firmware-${{ github.ref_name }}.zip`
+            
+            ### Hardware Support:
+            - **Target Board**: nRF7002 DK (nrf7002dk/nrf5340/cpuapp)
+            - **NCS Version**: ${{ needs.set-version.outputs.NCS_VERSION }}
+            
+            ### Usage:
+            1. Download the appropriate `.hex` file for your test scenario
+            2. Flash to nRF7002 DK using `west flash` or nRF Connect Programmer
+            3. Refer to [README.md](README.md) for configuration and operation details
+            
+            Built with NCS ${{ needs.set-version.outputs.NCS_VERSION }}
+          files: |
+            release-package/*.hex
+            wifi-latency-test-firmware-*.zip
+          draft: false
+          prerelease: false
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
