--- a/overlay-udp-rx-softap.conf
+++ b/overlay-udp-rx-softap.conf
@@ -7,8 +7,8 @@
 # -UDP Packet Latency Test Configuration: RX Device on SoftAP Mode START
 CONFIG_WIFI_LATENCY_TEST_DEVICE_ROLE_RX=y
 CONFIG_UDP_RX_DEV_MODE_SOFTAP=y
-CONFIG_UDP_RX_DEV_MODE_SOFTAP_SSID="wifi-latency-test"
-CONFIG_UDP_RX_DEV_MODE_SOFTAP_PSK="testpass123"
+CONFIG_SOFTAP_SSID="wifi-latency-test"
+CONFIG_SOFTAP_PASSWORD="testpass123"
 # -UDP Packet Latency Test Configuration: RX Device on SoftAP Mode END
 
 
