--- a/overlay-udp-tx-sta.conf
+++ b/overlay-udp-tx-sta.conf
@@ -21,8 +21,8 @@ CONFIG_WIFI_CREDENTIALS_STATIC=y
 # CONFIG_WIFI_CREDENTIALS_STATIC_PASSWORD="YourPASSWORD"
 # CONFIG_UDP_TX_DEV_TARGET_IP="192.168.1.100"
 #For Test 2: IP of SoftAP (192.168.1.1)
-CONFIG_WIFI_CREDENTIALS_STATIC_SSID="wifi-latency-test"
-CONFIG_WIFI_CREDENTIALS_STATIC_PASSWORD="testpass123"
+CONFIG_WIFI_CREDENTIALS_STATIC_SSID="wifi-latency-meas"
+CONFIG_WIFI_CREDENTIALS_STATIC_PASSWORD="nordicnrf7x"
 # --Wi-Fi drivers END
 # -Device Drivers START
 
